Created gateway as entry point * Created gateway as entry point for program * Moved generating script into src folder and gave it a cli option * Added content to MANIFEST.in so README.md and LICENSE are packaged too.

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,10 @@
 [MASTER]
 ignore=__pycache__,.git,.idea,.virtualenv,venv,vendor,build,dist
+
+[pypi]
+repository: https://pypi.org/legacy/
+username = pocc
+
+[testpypi]
+repository: https://test.pypi.org/legacy/
+username = pocc
