--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,3 @@
 [MASTER]
-ignore=__pycache__,.git,.idea,.virtualenv,venv,vendor,build,dist
+ignore=__pycache__,.git,.idea,.tox,.virtualenv,venv,vendor,build,dist
 disable=E0401,E0611
