Added to documentation * Fixed logo so it's not as busy * Changed Makefile so there's an `open` option to open index.html in a   browser. * Moved around API documentation so that it's readable.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -24,6 +24,7 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
 	@echo "  html       to make standalone HTML files"
+	@ecoh "  open       to open html after generating docs with `make html`"
 	@echo "  dirhtml    to make HTML files named index.html in directories"
 	@echo "  singlehtml to make a single large HTML file"
 	@echo "  pickle     to make pickle files"
@@ -57,6 +58,12 @@ html:
 	$(SPHINXBUILD) -W -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
+.PHONY: open
+open:
+	firefox ./_build/html/index.html
+	@echo
+	@echo "Opening page in firefox..."
 
 .PHONY: dirhtml
 dirhtml:
