WIP: Modifying example_usage Making this file more comprehensive 1/2 done (union and intersection done)

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -61,7 +61,7 @@ html:
 
 .PHONY: open
 open: clean html
-	firefox ./_build/html/index.html
+	firefox _build/html/index.html
 	@echo
 	@echo "Opening page in firefox..."
 
