--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ matrix:
     osx_image: xcode9.4
 
 before_install:
+  pwd
+  cd pcapgraph
+  ls
+  pip install -r requirements.txt
   pip install pyinstaller
 
 install:
