--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - pip install pyinstaller twine flake8 pylint yapf pytest
 
 install:
-  - pyinstaller gateway.py -n pcapgraph --onefile --exclude-module PyQt5 \
+  - pyinstaller gateway.py -n pcapgraph --onefile --exclude-module PyQt5
     --exclude-module PyQt4 --exclude-module PySide --clean -y
 
 # Troubleshooting github release + travis ci integration: https://docs.travis-ci.com/user/common-build-problems/#I-pushed-a-commit-and-can%E2%80%99t-find-its-corresponding-build
