--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ addons:
   apt:
     packages:
       - wireshark
+      - tshark
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update           ; fi
